[project]
name = "git-pr-helper-mcp"
version = "0.1.0"
description = "A safe MCP server for inspecting Git repos, planning commits, pushing branches, and opening pull requests."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mihael Arcan" },
]
keywords = ["mcp", "model-context-protocol", "git", "github", "pull-request", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "mcp>=1.12.0",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/miharcan/git-pr-helper-mcp"
Repository = "https://github.com/miharcan/git-pr-helper-mcp"
Issues = "https://github.com/miharcan/git-pr-helper-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
git-pr-helper-mcp = "git_pr_helper_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
